--- a/style.css
+++ b/style.css
@@ -818,12 +818,14 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("img/agence-la-panthere.webp");
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.webp");
 }
+
+/* Change bg-presentation img for .bg-banniere and bg-presentation - Optimisation 8 // Accesibility */
 
 @media (max-width: 1024px) {
     .bloc {
