--- a/style.css
+++ b/style.css
@@ -850,17 +850,20 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
+
+    /*deleted the 'device' word in the media queries to be in line with W3C best practices - line 853 & 859 */
+
 
 @media (max-width: 991px) {
     .container {
@@ -874,10 +877,9 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+   
+    /*deleted the padding right and padding left errors related to the .bloc to be in line with W3C best practices */
+
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -886,10 +888,10 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
     }
 }
+    /*deleted the padding right and padding left errors related to the .bloc-fill-screen to be in line with W3C best practices */
+
 
 @media (max-width: 767px) {
     .page-container {
