--- a/style.css
+++ b/style.css
@@ -677,8 +677,10 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
 }
+
+/*change of the police on p from 11px to 14px*/
 
 .tight-width-whitespace {
     max-width: 600px;
@@ -775,8 +777,9 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ffffff!important;
 }
+/*change the color for .tc-white from orange to white to enhance the contrast*/
 
 .btn-atomic-tangerine {
     background: #F3976C;
@@ -791,6 +794,7 @@ h4 {
 .ltc-white {
     color: #FFFFFF!important;
 }
+
 
 .ltc-white:hover {
     color: #cccccc!important;
